Visibility Phone-Visible Bug Fix
Fix the bug when the width is 0 to 350. visible-phone cannot be shown

--- a/css/BOOST.main.css
+++ b/css/BOOST.main.css
@@ -197,9 +197,12 @@ a.bg-danger:hover,a.bg-danger:focus{
 }
 /* Flexible Visibility */
 @media (min-width:0px) and (max-width:349px){
-	.visible-phone{
+	.invisible-phone{
 		display:none !important;
 	}
+	/* .visible-phone{
+		display:none !important;
+	} */
 	.visible-tablet{
 		display:none !important;
 	}
